configs/internal/sealed-secrets-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sealed-secrets-ui
  namespace: sealed-secrets-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: sealed-secrets-ui
      app.kubernetes.io/name: sealed-secrets-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: sealed-secrets-ui
        app.kubernetes.io/name: sealed-secrets-ui
    spec:
      automountServiceAccountToken: true
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
      - envFrom:
        - configMapRef:
            name: sealed-secrets-ui-cm
        image: 'ghcr.io/noahburrell0/sealed-secrets-ui:v0.1.2'
        imagePullPolicy: IfNotPresent
        name: sealed-secrets-ui
        ports:
          - containerPort: 5000
            name: http
            protocol: TCP
        volumeMounts:
          - name: sealed-secrets-ui-kubeconfs
            mountPath: /kubeconfs
            readOnly: true
      volumes:
        - name: sealed-secrets-ui-kubeconfs
          secret:
            secretName: sealed-secrets-ui-kubeconfs
